# Course8

./: .gitignore  pyproject.toml  readme.md
c7/: .env.sample  .gitlab-ci.yml  Dockerfile  celerybeat-schedule.bak  coverage_report.txt  deploy.sh  docker-compose.yaml  gunicorn_config.py  habits.service  init.sql  nginx  nginx_docker  nginx_gunicorn  pg_hba.conf  pyproject.toml
c7/config/: celery.py  settings.py  urls.py
c7/habits/: admin.py  models.py  paginators.py  permissions.py  serializers.py  servises.py  tasks.py  tests.py  urls.py  validators.py  views.py
c7/habits/migrations/: 0001_initial.py  0002_habit_last_reminder.py  0003_alter_habit_estimated_time.py  0004_alter_habit_periodicity.py  0005_alter_habit_periodicity.py
c7/users/: models.py  serializers.py  tests.py  validators.py
c7/users/management/commands/: create_users.py
c7/users/migrations/: 0001_initial.py  0002_alter_user_chat_id.py  0003_alter_user_managers_remove_user_role.py
